--- a/todo/style.css
+++ b/todo/style.css
@@ -97,5 +97,10 @@ form button:hover {
 
 .completed {
   text-decoration: line-through;
-  opacity: .9;
+  opacity: .5;
+}
+
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
 }
