--- a/todo/style.css
+++ b/todo/style.css
@@ -126,7 +126,7 @@ form button:hover {
   top: 0;
   right: 0;
   pointer-events: none;
-  padding: .23rem;
+  padding: .23rem .35rem;
   transition: all .5s ease;
 }
 
@@ -137,3 +137,6 @@ form button:hover {
 
 }
 
+.todo-id {
+  display: none;
+}
