--- a/todo/style.css
+++ b/todo/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
 body {
-  background-image: linear-gradient(120deg,#e2c35d, #d88771);
+  background-image: linear-gradient(120deg, #e2c35d, #d88771);
   color: white;
   font-family: "poppins";
   min-height: 100vh;
 }
-
 
 ul {
   list-style-type: none;
@@ -26,97 +25,55 @@ select {
   border: none;
 }
 
-header, form {
+header {
+  text-align: center;
+  padding: 3rem;
+  font-size: 2rem;
+}
+
+.container {
   display: flex;
-  justify-content: center;
-  min-height: 20vh;
-  align-items: center;
-}
-
-
-form input, form button {
-  border: none;
-  padding: 0.5rem;
-  background: white;
-  font-size: 1rem;
-  outline: none;
-}
-
-form button {
-  color: white;
-  background: #d88771;
-  cursor: pointer;
-  transition: all .3s ease;
-}
-
-form button:hover {
-  background: #d88771;
-  color: white;
-}
-
-.todo-container {
-  display: flex;
+  gap: 2.5rem;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 50%;
+  margin: auto;
 }
 
-.todo-list {
-  min-width: 30%;
-}
-
-.todo {
-  /* border: 1px dashed red; */
-  margin: 0.5rem;
-  background: white;
-  color: black;
-  font-size: .85rem;
+.todo-form {
   display: flex;
+  gap: 1rem;
   justify-content: space-between;
-  align-items: center;
-  transition: all .5s ease;
+  min-width: 100%;
 }
-
-.todo > li {
-  flex: 1;
-  padding: 0 3px;
-}
-
-.complete-btn, .trash-btn {
-  background: #f43d3d;
-  color: white;
+.todo-form input,
+.todo-form button {
   border: none;
   outline: none;
-  cursor: pointer;         
-  padding: .5rem;
+  padding: 0.7rem;
+  font-size: 1rem;
 }
 
-.complete-btn {
-  background: #4aa54a;
+.input-btn {
+  width: 100%;
+  display: flex;
 }
 
-.complete-btn:hover {
-  background: #3f973f;
+.todo-input {
+  width: 100%;
 }
 
-.fa-trash, .fa-check {
-  pointer-events: none;
+.todo-button {
+  background-color: #d88771;
+  color: white;
 }
 
-.completed {
-  text-decoration: line-through;
-  opacity: .5;
-}
-
-.fall {
-  transform: translateY(8rem) rotateZ(20deg);
-  opacity: 0;
-}
-
+/* Select options */
 .select-container {
-  margin: 1rem;
   position: relative;
   overflow: none;
-
+  min-width: 25%;
 }
 
 .select-container::after {
@@ -126,17 +83,86 @@ form button:hover {
   top: 0;
   right: 0;
   pointer-events: none;
-  padding: .23rem .35rem;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
+  height: 100%;
+  min-width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .filter-todo {
-  min-width: 8rem;
   cursor: pointer;
-  padding: .5rem;
-
+  padding: 0.5rem;
+  height: 100%;
+  width: 100%;
+  font-size: 1rem;
+  color: #121212;
 }
 
-.todo-id {
+/* the Todo list  */
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+.todo-container {
+  min-width: 100%;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.todo {
+  display: flex;
+  width: 100%;
+  background-color: white;
+  color: #121212;
+  transition: all 0.5s ease;
+}
+
+.todo > li {
+  flex: 1;
+  padding-left: 0.5rem;
+}
+
+.todo > .todo-id {
   display: none;
+}
+
+/* trash and check */
+.complete-btn,
+.trash-btn {
+  background: #f43d3d;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0.7rem;
+}
+
+.complete-btn {
+  background: #4aa54a;
+}
+
+.complete-btn:hover,
+.trash-btn:hover {
+  opacity: 0.85;
+}
+
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
 }
